--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^4.1.3",
+		"@base-ui/react": "^1.1.0",
 		"@dnd-kit/core": "^6.3.1",
 		"@dnd-kit/modifiers": "^9.0.0",
 		"@dnd-kit/sortable": "^10.0.0",
@@ -26,6 +27,7 @@
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@radix-ui/react-switch": "^1.2.6",
 		"@radix-ui/react-tabs": "^1.1.13",
 		"@radix-ui/react-toast": "^1.2.15",
 		"@radix-ui/react-toggle": "^1.1.10",
@@ -35,14 +37,18 @@
 		"@refinedev/graphql": "^8.0.1",
 		"@refinedev/nextjs-router": "^7.0.4",
 		"@refinedev/react-hook-form": "^5.0.4",
+		"@refinedev/simple-rest": "^6.0.1",
 		"@tanstack/react-query": "^5.90.20",
 		"@tanstack/react-table": "^8.21.3",
 		"@types/bcryptjs": "^3.0.0",
+		"@urql/core": "^6.0.1",
 		"apollo-server-micro": "^3.13.0",
+		"axios": "^1.13.4",
 		"bcryptjs": "^3.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"graphql": "^16.12.0",
+		"graphql-request": "^7.4.0",
 		"graphql-tag": "^2.12.6",
 		"lucide-react": "^0.563.0",
 		"mongodb": "^7.0.0",
